<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp">

        <ImageView
            android:id="@+id/dial"
            android:layout_width="@dimen/dial"
            android:layout_height="@dimen/dial"
            android:layout_centerInParent="true"
            android:contentDescription="@string/compass_dial"
            android:src="@drawable/dial" />

        <ImageView
            android:id="@+id/qibla_indicator"
            android:layout_width="@dimen/qibla"
            android:layout_height="@dimen/qibla"
            android:layout_centerInParent="true"
            android:contentDescription="@string/compass_hands"
            android:scaleType="fitXY"
            android:src="@drawable/qibla" />
    </RelativeLayout>

    <TextView
        android:id="@+id/angle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="Angle" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/footer_image"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/bottom_image"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/footer_image"
            android:scaleType="fitXY"
            android:src="@drawable/footer" />

        <TextView
            android:id="@+id/your_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"
            tools:text="hii" />
    </RelativeLayout>
</LinearLayout>
